tests/integration/snapshots/integration__conformance__n_structure_number_with_trailing_garbage.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
2@
stderr ---
error: unexpected character `@`. expected start of a json value
 --> stdin:1:2
  |
1 | 2@
  |  ^
