tests/integration/snapshots/integration__conformance__n_structure_object_followed_by_closing_object.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{}}
stderr ---
error: unexpected token `}` after json finished
 --> stdin:1:3
  |
1 | {}}
  |   ^
  |
help: consider removing the trailing content (starting with `}`)
  |
1 - {}}
1 + {}
  |
