tests/integration/snapshots/integration__conformance__n_structure_object_unclosed_no_value.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{"":
stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:1:4
  |
1 | {"":
  |    ^
  |    |
  |    expected due to `:`
  |
help: insert a placeholder value
  |
1 | {"": "rust is a must"
  |      ++++++++++++++++
